# dotfiles

./: .bashrc  .gitignore  README.md  WARP.md  install-functions.sh  install.sh
flameshot/: flameshot.ini
hypr/: hyprland.conf
installer/: Cargo.toml
installer/src/: main.rs
installer/src/models/: mod.rs  package.rs  state.rs
installer/src/ui/: menu.rs  mod.rs
installer/src/utils/: command.rs  mod.rs
pipewire/pipewire-pulse.conf.d/: 99-noflat.conf
rofi/: config.rasi
swayidle/: config
swaylock/: config
waybar/: config.jsonc  modules.jsonc  style.css
waybar/scripts/: asus-gpu-mode.sh  asus-profile.sh  installaupdates.sh  updates.sh
wireplumber/main.lua.d/: 50-alsa.lua  60-logitech-softmixer.lua
wlogout/: layout  style.css
