[package]
name = "dotfiles-installer"
version = "1.0.0"
edition = "2021"
authors = ["cgtarmenta"]
description = "Interactive TUI installer for Hyprland dotfiles"
license = "MIT"
repository = "https://github.com/cgtarmenta/dotfiles"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs = "5.0"

[profile.release]
strip = true              # Strip debug symbols
lto = true                # Link-time optimization  
codegen-units = 1         # Better optimization
opt-level = "z"           # Optimize for size
panic = "abort"           # Reduce binary size
